MarcoKitTests/TestData/error/object10.marco
--before
{"a"0 "b"1}

--after
4-5: Whitespace required in a key-value pair
